--- a/app1/src/index.css
+++ b/app1/src/index.css
@@ -17,5 +17,30 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: green;
+  color: gray;
+}
+
+.App {
+  border: 2px solid gray;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.input {
+  border: 1px solid gray;
+  border-radius: 5px;
+  width: 70%;
+  margin-right: 10px;
+}
+
+.submit {
+  border-radius: 1px solid gray;
+  color: gray;
+  background-color: white;
 }
