--- a/app1/src/index.css
+++ b/app1/src/index.css
@@ -17,11 +17,11 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: gray;
+  color: #1976d2;
 }
 
 .App {
-  border: 2px solid gray;
+  border: 2px solid #1976d2;
   margin: 20px;
   padding: 10px;
   border-radius: 5px;
@@ -36,7 +36,6 @@ code {
 }
 
 .input {
-  border: 1px solid gray;
   border-radius: 5px;
   width: 70%;
   margin-right: 10px;
@@ -69,7 +68,7 @@ code {
 }
 
 .user {
-  color: gray;
+  color: rgb(34, 33, 33);
   font-size: large;
   background-color: lightgrey;
   border-radius: 10px;
@@ -93,4 +92,8 @@ p{
 
 .h1_text {
   text-align: center;
+}
+
+.Chats {
+  padding-top: 10px;
 }
